add story editing (but still cannot add new choice).